{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 101,
  "lineage": "07f146a6-687f-8ef6-c66d-2cf8d8a3a309",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c1fe732b5494dc14",
            "arn": "arn:aws:ec2:us-east-1:444284888877:instance/i-05f919a17ff9190d4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f919a17ff9190d4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "chandu-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-094938f442f868156"
              }
            ],
            "primary_network_interface_id": "eni-094938f442f868156",
            "private_dns": "ip-172-31-28-29.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.28.29",
            "public_dns": "ec2-3-91-76-206.compute-1.amazonaws.com",
            "public_ip": "3.91.76.206",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07bf5f7c069ddc3f0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072dd82eb6a2c8908",
            "tags": {
              "Name": "AWS-Free-VM"
            },
            "tags_all": {
              "Name": "AWS-Free-VM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04a8e80b5135f1165"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "444284888877",
            "id": "i-05f919a17ff9190d4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.chandu_key",
            "aws_security_group.aws_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444284888877:security-group/sg-04a8e80b5135f1165",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a8e80b5135f1165",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "444284888877",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02f4c502fd2f0ffed"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "444284888877",
            "id": "sg-04a8e80b5135f1165",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/cf6fc85d-79fd-4b8f-aeaf-f89619759bd4/resourceGroups/chandu-free-rg/providers/Microsoft.Network/networkInterfaces/chandu-nic",
            "internal_domain_name_suffix": "y5glmxop3ncufpt2qi013j4z1g.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/cf6fc85d-79fd-4b8f-aeaf-f89619759bd4/resourceGroups/chandu-free-rg/providers/Microsoft.Network/publicIPAddresses/chandu-pip",
                "subnet_id": "/subscriptions/cf6fc85d-79fd-4b8f-aeaf-f89619759bd4/resourceGroups/chandu-free-rg/providers/Microsoft.Network/virtualNetworks/chandu-vnet/subnets/internal"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus2",
            "name": "chandu-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "chandu-free-rg"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "chandu-nic",
            "resource_group_name": "chandu-free-rg",
            "subscription_id": "cf6fc85d-79fd-4b8f-aeaf-f89619759bd4"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/cf6fc85d-79fd-4b8f-aeaf-f89619759bd4/resourceGroups/chandu-free-rg/providers/Microsoft.Network/publicIPAddresses/chandu-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.97.231.156",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "chandu-pip",
            "resource_group_name": "chandu-free-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/cf6fc85d-79fd-4b8f-aeaf-f89619759bd4/resourceGroups/chandu-free-rg/providers/Microsoft.Network/virtualNetworks/chandu-vnet/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "chandu-free-rg",
            "virtual_network_name": "chandu-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "internal",
            "resource_group_name": "chandu-free-rg",
            "subscription_id": "cf6fc85d-79fd-4b8f-aeaf-f89619759bd4",
            "virtual_network_name": "chandu-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5db6ccc7-ebcf-4245-be7c-8235bea7d9de",
            "id": "/subscriptions/cf6fc85d-79fd-4b8f-aeaf-f89619759bd4/resourceGroups/chandu-free-rg/providers/Microsoft.Network/virtualNetworks/chandu-vnet",
            "location": "eastus2",
            "name": "chandu-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "chandu-free-rg"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "chandu-vnet",
            "resource_group_name": "chandu-free-rg",
            "subscription_id": "cf6fc85d-79fd-4b8f-aeaf-f89619759bd4"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "gcp_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-02-15T03:16:46.316-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/chandu-project-487415/global/firewalls/allow-ssh-gcp",
            "log_config": [],
            "name": "allow-ssh-gcp",
            "network": "https://www.googleapis.com/compute/v1/projects/chandu-project-487415/global/networks/default",
            "params": [],
            "priority": 1000,
            "project": "chandu-project-487415",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chandu-project-487415/global/firewalls/allow-ssh-gcp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "gcp_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20260210",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/chandu-project-487415/zones/us-central1-a/disks/gcp-free-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2026-02-15T03:16:50.381-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/chandu-project-487415/zones/us-central1-a/instances/gcp-free-vm",
            "instance_id": "2289635270296606158",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "chandu:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIK4+mxZl4WE9u2uZ/IMpRsRgFKecMZ0t/TgjnOQwlIFt chandu@CHANDU\r\n"
            },
            "metadata_fingerprint": "ewDSFAaMy7k=",
            "name": "gcp-free-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.202.208.144",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/chandu-project-487415/global/networks/default",
                "network_ip": "10.128.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/chandu-project-487415/regions/us-central1/subnetworks/default",
                "subnetwork_project": "chandu-project-487415",
                "vlan": 0
              }
            ],
            "project": "chandu-project-487415",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/chandu-project-487415/zones/us-central1-a/instances/gcp-free-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}